Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26221

More checks missing guarding against incompatible plugins

XMLWordPrintable

    • 2a331567f (master)

      If there are two Core plugins in different versions, Qt Creator crashes.

      • main already checks if Core is there, extend the check to the version of Core plugin too
      • plugin manager should only load one version (highest version) of the same plugin (with same name), and put an error on the other(s)

        For Gerrit Dashboard: QTCREATORBUG-26221
        # Subject Branch Project Status CR V

            con Eike Ziller
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes