ExtensionSystem: Check for duplicate plugins

If there are multiple plugins with the same name, do not load any of
them, mark them with error.

Fixes: QTCREATORBUG-26221
Change-Id: Id433a66203294b8302294eb09665043452e45ded
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>